--- a/kinorg/templates/kinorg/filmlist_create_form.html
+++ b/kinorg/templates/kinorg/filmlist_create_form.html
@@ -1,12 +1,19 @@
 {% extends "kinorg/base.html" %}
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'kinorg/css/create_list.css' %}">
+{% endblock %}
 
 {% block content %}
 
+<div class="create_list_form">
 <form method="post">
 	{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Create">
 </form>
+</div>
 
 
 {% endblock %}
