--- a/kinorg/templates/kinorg/home.html
+++ b/kinorg/templates/kinorg/home.html
@@ -1,18 +1,35 @@
 {% extends "kinorg/base.html" %}
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'kinorg/css/home.css' %}">
+{% endblock %}
 
 {% block content %}
+	
+	<div class="home_page_container">
 
-	<h1>KINORG HOMEPAGE</h1>
+		<div class="welcome_message">
+			<h1>WELCOME</h1>
+		</div>
 
-	<a href="{% url 'kinorg:my_lists' %}"><p>My Lists</p></a>
+		<div class="film_list_container">
 
-    <ul>
-    	{% for film in films %}
-    	<li>
-    		<a href="{% url 'kinorg:film_detail' film.movie_id %}">{{ film.title }}</a>
-            <img src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
-    	</li>
-    	{% endfor %}
-    </ul>
+    		<ul class="latest_added_films">
+
+    			{% for film in films %}
+
+    			<li class="added_film">
+    				<a href="{% url 'kinorg:film_detail' film.movie_id %}">{{ film.title }}</a>
+    	    	    <img class="film_poster" src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
+    			</li>
+
+    			{% endfor %}	
+
+    		</ul>
+
+		</div>
+
+	</div>
 
 {% endblock %}
