--- a/kinorg/static/kinorg/css/home.css
+++ b/kinorg/static/kinorg/css/home.css
@@ -1,39 +1,47 @@
 .home_page_container {
     display: grid;
-    grid-template-rows: 100px 1fr;
+    grid-template-rows: 50px 50px 1fr;
 }
 
-.welcome_message {
+.login_link {
     grid-row: 1;
     display: flex;
     justify-content: center;
+    align-items: flex-end;
+    text-decoration: underline;
+}
+
+.list_header {
+    grid-row: 2;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .film_list_container {
-    grid-row: 2;
+    grid-row: 3;
     display: grid;
-    grid-template-columns: auto minmax(500px, 1500px) auto;
+    grid-template-columns: auto minmax(100px, 1000px) auto;
 }
 
-
-.latest_added_films {
+.list_of_films {
     grid-column: 2;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column;
     justify-content: flex-start;
     padding: 0;
     gap: 10px;
 }
 
-.added_film {
+.film_item {
     display: flex;
-    flex-direction: column;
-    width: 220px;
-    padding: 20px;
+    flex-direction: row;
+    width: 100%;
     border-color: black;
     border-style: solid;
     border-radius: 5px;
     border-width: 2px;
+    gap: 10px;
 }
 
 .film_poster {
