--- a/kinorg/static/kinorg/css/search.css
+++ b/kinorg/static/kinorg/css/search.css
@@ -1,25 +1,31 @@
+.film_list_container {
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: auto minmax(100px, 1000px) auto;
+}
+
 .list_of_films {
+    grid-column: 2;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    flex-flow: column;
+    justify-content: flex-start;
     padding: 0;
     gap: 10px;
 }
 
 .film_item {
     display: flex;
-    flex-direction: column;
-    width: 220px;
-    padding: 20px;
+    flex-direction: row;
+    width: 100%;
     border-color: black;
     border-style: solid;
     border-radius: 5px;
     border-width: 2px;
+    gap: 10px;
 }
 
 .film_poster {
     max-width: 92px;
-    padding-bottom: 5px;
 }
 
 
