--- a/static/user_admin/css/reset_password.css
+++ b/static/user_admin/css/reset_password.css
@@ -1,19 +1,14 @@
-.login_page {
+.reset_page {
 	display: flex;
 	flex-direction: column;
 }
 
-.login_title{
+.reset_title {
 	display: flex;
 	justify-content: center;
 }
 
-.login_form_container {
-	display: flex;
-	justify-content: center;
-}
-
-.reset_link {
+.reset_form {
 	display: flex;
 	justify-content: center;
 }
