--- a/kinorg/static/kinorg/css/base.css
+++ b/kinorg/static/kinorg/css/base.css
@@ -10,27 +10,26 @@ ul {
 
 .top_bar {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 75px 50px 50px;
 }
 
-.search_bar {
-	grid-column: 1;
+.bar_item {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .main_title {
-	grid-column: 2;
-	display: flex;
-	justify-content: center;
+	grid-row: 1;
+}
+
+
+.search_bar {
+	grid-row: 2;
 }
 
 .user_access {
-	grid-column: 3;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	grid-row: 3;
 	gap: 10px;
 }
 
