--- a/kinorg/static/kinorg/css/film_detail.css
+++ b/kinorg/static/kinorg/css/film_detail.css
@@ -1,3 +1,28 @@
 p.italic {
   font-style: italic;
 }
+
+.headline {
+  display: flex;
+  justify-content: center;
+}
+
+.film_details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.film_poster {
+  max-width: 92px;
+}
+
+.overview {
+  max-width: 500px;
+}
+
+.available_lists {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
