--- a/kinorg/static/kinorg/css/home.css
+++ b/kinorg/static/kinorg/css/home.css
@@ -1,10 +1,22 @@
 .home_page_container {
     display: grid;
-    grid-template-rows: 50px 50px 1fr;
+    grid-template-rows: 100px 50px 50px 1fr;
+}
+
+.countdown_container {
+    grid-row: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.countdown {
+    border-style: solid;
+    height: fit-content;
+    padding: 10px;
 }
 
 .login_link {
-    grid-row: 1;
+    grid-row: 2;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -12,14 +24,14 @@
 }
 
 .list_header {
-    grid-row: 2;
+    grid-row: 3;
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
 
 .film_list_container {
-    grid-row: 3;
+    grid-row: 4;
     display: grid;
     grid-template-columns: auto minmax(100px, 1000px) auto;
 }
