--- a/kinorg/templates/kinorg/home.html
+++ b/kinorg/templates/kinorg/home.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" type="text/css" href="{% static 'kinorg/css/home.css' %}">
 {% endblock %}
 
+{% block extra_js %}
+<!-- <script src="{% static 'kinorg/js/countdown.js' %}"></script> -->
+{% endblock %}
+
 {% block content %}
 	
 	<div class="home_page_container">
@@ -39,4 +43,10 @@
 
 	</div>
 
-{% endblock %}
+	<script src="{% static 'kinorg/js/countdown.js' %}"></script>
+
+{% endblock content %}
+
+
+
+
