allowed hosts, cleaned up views

--- a/kinorg/static/kinorg/css/my_lists.css
+++ b/kinorg/static/kinorg/css/my_lists.css
@@ -1,7 +1,8 @@
 
 .lists_container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .invitations_container {
