--- a/kinorg/static/kinorg/css/film_list.css
+++ b/kinorg/static/kinorg/css/film_list.css
@@ -9,7 +9,14 @@
     justify-content: center;
 }
 
+.film_list_container {
+    padding-top: 15px;
+    display: grid;
+    grid-template-columns: 1fr minmax(110px, 1000px) 1fr;
+}
+
 .list_of_films {
+    grid-column: 2;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -18,19 +25,7 @@
 }
 
 .film_item {
-    display: flex;
-    flex-direction: column;
-    width: 220px;
-    padding: 20px;
-    border-color: black;
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 2px;
-}
-
-.film_poster {
-    max-width: 92px;
-    padding-bottom: 5px;
+    width: 100px;
 }
 
 .footer_links {
