--- a/kinorg/templates/kinorg/filmlist_detail.html
+++ b/kinorg/templates/kinorg/filmlist_detail.html
@@ -22,28 +22,32 @@
     		</form>
 	</div>
 
+	<div class="film_list_container">
+
 	<ul class="list_of_films">
 
 		{% for addition in object.addition_set.all %}
 		<li class="film_item">
 
 			<a href="{% url 'kinorg:film_detail' addition.film.movie_id %}">
-				<p>{{ addition.film.title }} ({{ addition.film.year }})</p>
-				<p>Added by {{ addition.added_by }}</p>
+<!-- 				<p>{{ addition.film.title }} ({{ addition.film.year }})</p>
+				<p>Added by {{ addition.added_by }}</p> -->
 				<img class="film_poster" src="{{config_data.secure_base_url}}w92{{addition.film.poster_path}}">
 			</a>
 
-			<form method="POST" action="/remove-film/">
+<!-- 			<form method="POST" action="/remove-film/">
         	    {% csrf_token %}
         	    <input type="hidden" id="list_id" name="list_id" value="{{ addition.film_list.pk }}">
     			<input type="hidden" id="movie_id" name="movie_id" value="{{ addition.film.movie_id }}">
         		<button type="submit">REMOVE FROM LIST</button>
-    		</form>
+    		</form> -->
 
 		</li>
 		{% endfor %}
 
 	</ul>
+
+	</div>
 
 </div>
 
