tweaked static settings

--- a/kinorg/templates/kinorg/base.html
+++ b/kinorg/templates/kinorg/base.html
@@ -8,7 +8,7 @@
 	<title></title>
 
 	{# Global stylesheets #}
-	<link rel="stylesheet" type="text/css" href="{% static 'kinorg/css/base.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'kinorg/css/kinorg_base.css' %}">
 	<link rel="shortcut icon" href="{%  static 'favicon/favicon.ico' %}">
 
 	{% block extra_css %}
