--- a/staticfiles/css/kinorg_base.css
+++ b/staticfiles/css/kinorg_base.css
@@ -100,6 +100,10 @@ button {
 	background-color: black;
 }
 
+input {
+  background-color: black;
+}
+
 .top_bar {
 	display: grid;
 	grid-template-rows: 75px 50px 50px;
