--- a/kinorg/static/kinorg/css/invitations.css
+++ b/kinorg/static/kinorg/css/invitations.css
@@ -1,6 +1,19 @@
 .invitations_list {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+}
+
+.invitation {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+}
+
+.invitation_options {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
 
 .message {
