--- a/kinorg/templates/kinorg/film_detail.html
+++ b/kinorg/templates/kinorg/film_detail.html
@@ -13,7 +13,13 @@
 	    <h2><b>{{ film.title }}</b></h2>
         <p class="italic">{{ film.tagline }}</p>
 	    <p>Released: {{ film.release_date|slice:4 }}</p>
-	    <img class="film_poster" src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
+
+        {% if film.poster_path %}
+	    <img class="poster" src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
+        {% else %}
+        <img class="poster" src="{% static 'images/placeholder.jpg' %}">
+        {% endif %}
+        
 	    <p class="overview">{{ film.overview }}</p>
  
     </div>
