--- a/kinorg/templates/kinorg/home.html
+++ b/kinorg/templates/kinorg/home.html
@@ -30,7 +30,7 @@
 
     			<li class="film_item">
     				<a href="{% url 'kinorg:film_detail' film.movie_id %}">
-    					<img class="film_poster" src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
+    					<img class="poster" src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
     				</a>
     			</li>
 
