--- a/kinorg/templates/kinorg/search.html
+++ b/kinorg/templates/kinorg/search.html
@@ -7,40 +7,52 @@
 
 {% block content %}
 
-    <div class="film_list_container">
+    <div class="results_list_container">
 
 
-        {% if film_list %}
-        <ul class="list_of_films">
+        {% if results_list %}
+        <ul class="list_of_results">
 
-            {% for item in film_list %}
-                <li class="film_item">
+            {% for result in results_list %}
+                <li class="results_item">
 
-                    {% if item.poster_path %}
-                        <img class="film_poster" src="{{config_data.secure_base_url}}w92{{item.poster_path}}">
-                    {% elif item.profile_path %}
-                        <img class="film_poster" src="{{config_data.secure_base_url}}w92{{item.profile_path}}">
+                    <div class="result">
+
+                    {% if result.poster_path %}
+                        <img class="poster" src="{{config_data.secure_base_url}}w92{{result.poster_path}}">
+                    {% elif result.profile_path %}
+                        <img class="poster" src="{{config_data.secure_base_url}}w92{{result.profile_path}}">
                     {% else %}
-                        <img class="film_poster" src="{% static 'kinorg/images/placeholder.jpg' %}">
+                        <img class="poster" src="{% static 'images/placeholder.jpg' %}">
                     {% endif %}
 
-                    {% if item.title %}
-                        <a href="{% url 'kinorg:film_detail' item.id %}">{{ item.title }}</a>
+                    <div class="result_info">
+                    {% if result.title %}
+                        <a href="{% url 'kinorg:film_detail' result.id %}">{{ result.title }}</a>
                     {% endif %}
 
-                    {% if item.name %}
-                        <a href="{% url 'kinorg:person_credits' item.id %}">{{ item.name }}</a>
+                    {% if result.name %}
+                        <a href="{% url 'kinorg:person_credits' result.id %}">{{ result.name }}</a>
                     {% endif %}
 
-                    {% if item.release_date %}
-                        <div>({{ item.release_date|slice:4 }})</div>
+                    {% if result.release_date %}
+                        <div>({{ result.release_date|slice:4 }})</div>
                     {% endif %}
 
-                    {% if item.known_for %}
-                        {% for film in item.known_for %}
+                    {% if result.title %}
+                        <p>Add to list</p>
+                    {% endif %}
+
+                    {% if result.known_for %}
+                        <div class="known_for">
+                        {% for film in result.known_for %}
                             <a href="{% url 'kinorg:film_detail' film.id %}"><button>{{ film.title }}</button></a>
                         {% endfor %}
+                        </div>
                     {% endif %}
+                    </div>
+
+                    </div>
 
                 </li>
             {% endfor %}
